CPack/IFW: Path needs to be escaped for binarycreator command
IF you have a space in your path, the package generation will fail.
# Run command: C:/Qt/QtIFW-3.1.1/bin/binarycreator.exe -c C:/MJW Git/EnergyPlus-MJWReview2/Build/_CPack_Packages/win64/IFW/EnergyPlus-9.2.0-75370ce75b-Windows-x86_64/config/config.xml -p C:/MJW Git/EnergyPlus-MJWReview2/Build/_CPack_Packages/win64/IFW/EnergyPlus-9.2.0-75370ce75b-Windows-x86_64/packages C:/MJW Git/EnergyPlus-MJWReview2/Build/_CPack_Packages/win64/IFW/EnergyPlus-9.2.0-75370ce75b-Windows-x86_64.exe
# Output:
Error: Config file C:/MJW not found at the specified location.
I think this->toplevel must be escaped.
https://gitlab.kitware.com/cmake/cmake/blob/v3.15.2/Source/CPack/IFW/cmCPackIFWGenerator.cxx#L45
Edited by Brad King