CPack/IFW: Command vectorization

Fixes: #19634